(safari) ensure justify single item menu lines, safari doesn't support 'text-align-last'

--- a/assets/sass/_sitenav.scss
+++ b/assets/sass/_sitenav.scss
@@ -68,7 +68,15 @@
   }   
     .dc-work--year .dc-work--items > *:only-child{
       flex-grow: 2;
+      /* related to safari no justify last line fix*/
+      margin-bottom: -1em;
     }    
+    /* fix safari no justify last line */
+    .dc-work--year .dc-work--items > *:only-child:after {
+      content: "";
+      display: inline-block;
+      width: 100%;
+    }
 
 /* related matters */
 /* now */
